--- a/appendix_constants.tex
+++ b/appendix_constants.tex
@@ -149,7 +149,7 @@
     \hline
     Bindungswinkel von Wasser                     & \SI{104.51}{\degree}   & \cite{haynes_crc_2011} S.9-24 \\
     \ce{O-H}-Bindungslänge in Wasser              & \SI{0.9575}{\angstrom} & \cite{haynes_crc_2011} S.9-24 \\
-    Struktur von TMA $\left(\ce{Al(CH3)3}\right)$ & planar, triagonal      & \cite{haynes_crc_2011} S.9-46 \\
+    Struktur von TMA $\left(\ce{Al(CH3)3}\right)$ & trigonal-planar        & \cite{haynes_crc_2011} S.9-46 \\
     \ce{Al-C}-Bindungslänge in TMA                & \SI{1.957}{\angstrom}  & \cite{haynes_crc_2011} S.9-46 \\
     \ce{C-H}-Bindungslänge in TMA                 & \SI{1.113}{\angstrom}  & \cite{haynes_crc_2011} S.9-46 \\
     \hline
