--- a/appendix_gold.tex
+++ b/appendix_gold.tex
@@ -2,7 +2,7 @@
 
 Im Folgenden sollen ergänzend die in Abschnitt~\ref{goldpvd} vorgestellten Simulationen auf nanostrukturierten Substraten dargestellt werden.
 Die beiden Substrate wurden mit \SI{1}{\nano\meter} breiten Lamellen sowie \SI{1x1}{\nano\meter} breiten Säulen, die in beiden Fällen eine Höhe von \SI{1}{\nano\meter} haben, präpariert (Abbildung~\ref{fig:goldnanostructures}), um die Stabilität von Parsivald bei der Relaxierung solcher Substrate zu prüfen.
-Es wird aufgrund der hohen Mobilität von Gold-Atomen auf der Oberfläche eine Relaxierung hinsichtlich einer geringeren Oberfläche erwartet, die nach kurzer Zeit ununterscheidbar von einer glatten Oberfläche sein sollte.
+Es wird aufgrund der hohen Mobilität von Gold-Atomen auf der Oberfläche eine Relaxierung hinsichtlich einer geringeren Oberfläche erwartet, die nach kurzer Zeit nicht unterscheidbar von einer glatten Oberfläche sein sollte.
 
 Diese Glättung der Oberfläche ist in Abbildungen~\ref{fig:goldnanostructures-step3} und~\ref{fig:goldnanostructures-step9} klar zu erkennen.
 Wie besonders an der Relaxierung der Säulen zu erkennen ist, findet die Glättung nicht ausschließlich durch eine Beschichtung der Oberfläche statt, sondern wird durch Relaxierung der Säulen zu einer glätteren Oberfläche erreicht.
@@ -31,7 +31,7 @@ Zum Zeitpunkt der vollständigen Relaxierung liegt die Dicke der abgeschiedenen 
 
 \end{figure}
 
-\begin{figure}[!h]
+\begin{figure}[H]
   \captionsetup[subfigure]{singlelinecheck=false}
   \def\subfigwidth{0.49\textwidth}
 
@@ -52,7 +52,7 @@ Zum Zeitpunkt der vollständigen Relaxierung liegt die Dicke der abgeschiedenen 
 
 \end{figure}
 
-\begin{figure}[!h]
+\begin{figure}[H]
   \captionsetup[subfigure]{singlelinecheck=false}
   \def\subfigwidth{0.49\textwidth}
 
