--- a/appendix_multilayer.tex
+++ b/appendix_multilayer.tex
@@ -17,7 +17,7 @@ Als Resultat bilden sich Poren (Abbildung~\ref{fig:multilayer_surfacefail}), die
 \end{figure}
 
 Abbildung~\ref{fig:multilayer_columnfail} zeigt ein gleichartiges Resultat, das mit denselben Parametern erzeugt wurde.
-Hier ist erkennbar, wie sich die gebildeten Poren nach vielen Schichten wieder schließen, wobei zur bessseren Veranschaulichung nur ein wenige Nanometer dünnes Profil abgebildet wurde.
+Hier ist erkennbar, wie sich die gebildeten Poren nach vielen Schichten wieder schließen, wobei zur besseren Veranschaulichung nur ein wenige Nanometer dünnes Profil abgebildet wurde.
 Untersuchungen experimentell abgeschiedener Schichten zeigen keine derartigen Fehlstellen\cite{yang_pulsed_1995}, allerdings ist ihre Dicke um einen Faktor von \num{100} höher.
 Auch molekulardynamische Untersuchungen\cite{zhou_atomic_2001} fanden keine Bildung von Hohlräumen.
 Das Verschwinden der Hohlräume in eigenen Experimenten deutet auf ein Artefakt der Unterrelaxierung hin.
