--- a/depositions.tex
+++ b/depositions.tex
@@ -5,8 +5,8 @@ Gasphasenabscheidungen sind Herstellungsverfahren, bei denen durch physikalische
 Bei den hier untersuchten Arten von Gasphasenabscheidungen handelt es sich um \textbf{Physikalische Gasphasenabscheidung}\cite{mattox_handbook_2010} (PVD, Physical Vapor Deposition), \textbf{Chemische Gasphasenabscheidung}\cite{pierson_handbook_1999} (CVD, Chemical Vapor Deposition) und \textbf{Atomlagenabscheidung} (ALD, Atomic Layer Deposition, eine Sonderform der CVD)\cite{suntola_method_1977}, die im folgenden vorgestellt werden.
 
 Allen Verfahren ist gemein, dass einzelne Atome oder Moleküle aus der Gasphase auf der Oberfläche auftreffen, dort physikalisch oder chemisch adsorbieren und so mit vorhersehbarer Rate eine dünne Schicht eines gewünschten Materiales bilden.
-Die Abscheidungsarten ermöglichen dabei über ihre Adsorptionsbedingungen und die Wahl der Prozessgase die Bildung unterschiedlicher Materialien mit verschiedener Kontrolle der Qualität und Dicke der abgeschiedenen Schicht.
-Tabellen~\ref{tab:deposition-comparison} und~\ref{tab:deposition-materials} sollen einen kurzen Überblick über die vorgestellten Abscheidungsarten und ihre möglichen Materialien verschaffen.
+Die Abscheidungsmethoden ermöglichen dabei über ihre Adsorptionsbedingungen und die Wahl der Prozessgase die Bildung unterschiedlicher Materialien mit verschiedener Kontrolle der Qualität und Dicke der abgeschiedenen Schicht.
+Tabellen~\ref{tab:deposition-comparison} und~\ref{tab:deposition-materials} sollen einen kurzen Überblick über die vorgestellten Abscheidungsmethoden und ihre möglichen Materialien verschaffen.
 Alle Prozesse finden in speziellen Abscheidungskammern oder Reaktoren statt, über die Abbildung~\ref{fig:reactors} einen kurzen Überblick geben soll.
 
 \begin{table}[hb]
@@ -195,9 +195,8 @@ Eine ausführlichere Übersicht zu Atomlagenabscheidungen und zu möglichen Prec
 \end{table}
 
 \todoline{fig:methodscales}
-\missingfigure{fig:methodscales}
 
-Für die Simulation von Gasphasenabscheidungen stehen verschiedene numerische Methoden zur Verfügung, welche die Darstellung auf unterschiedlichen Zeit- und Größenordnungen ermöglichen (Tabelle~\ref{tab:deposition-simulations}, Abbildung~\ref{fig:methodscales}).
+Für die Simulation von Gasphasenabscheidungen stehen verschiedene numerische Methoden zur Verfügung, welche die Darstellung auf unterschiedlichen Zeit- und Größenordnungen ermöglichen (Tabelle~\ref{tab:deposition-simulations}).
 Jede dieser Methoden basiert auf anderen Annahmen und Formulierungen, so dass sich ihre Anwendungsgebiete zwar nur marginal überschneiden, aber der Transfer von Ergebnissen zwischen den Methoden zu präziseren Vorhersagen führen kann.
 So können CFD-Reaktorsimulationen den Gasverbrauch an charakteristischen Punkten der Oberfläche durch KMC-Simulationen ermitteln, welche wiederum auf DFT-Daten für Reaktionsraten und -energien zurück greift.
 Bisherige Simulationen verzichten aus Gründen der notwendigen Laufzeit meist auf eine strukturelle Betrachtungen der abgeschiedenen Schicht, wie sie etwa mit molekulardynamischen Rechnungen möglich werden.
