--- a/kmc.tex
+++ b/kmc.tex
@@ -1,7 +1,7 @@
 \section{Kinetic Monte Carlo-Methoden}
 \label{kmc}
 
-Kinetische Monte Carlo-Methoden (KMC)\cite{voter_introduction_2007} wurden ursprünglich zur Simulation von Diffusionsprozessen entwickelt, finden aber inzwischen in vielen Gebieten der Natur- und Ingenieurswissenschaften Anwendung\todo{Ref}.
+Kinetische Monte Carlo-Methoden (KMC)\cite{voter_introduction_2007} wurden ursprünglich zur Simulation von Diffusionsprozessen entwickelt, finden aber inzwischen in verschiedenen Gebieten der Naturwissenschaften Anwendung\cite{yang_kinetic_2008,nielsen_parallel_2013,gosalvez_atomistic_2008}.
 Sie beschreiben den Zeitverlauf eines Systemes als eine Abfolge von diskreten Übergängen (Ereignissen) zwischen Systemzuständen $X_n$ und $X_m$, die mit ihrer charakteristischen Rate $r_{n m}$ gewichtet werden.
 Damit stellen sie eine numerische Lösung der Mastergleichung für Markov-Prozesse dar.
 \begin{equation}
