--- a/masterthesis.tex
+++ b/masterthesis.tex
@@ -1,8 +1,9 @@
 \pdfminorversion=4
+\pdfobjcompresslevel=0
 
 \newif\ifpaperonly
 \paperonlyfalse
-%\paperonlytrue
+%% \paperonlytrue
 
 \documentclass[
 draft,
@@ -62,9 +63,12 @@ BCOR9mm,
 
 \todoline{Prüfen, ob die Abkürzungen im Text ordentlich eingeführt werden}
 \todoline{figures und tables positionieren!}
+\todoline{figures und tables: captions überarbeiten}
 \todoline{Erste Absätze: Keine Einrückung.}
 \todoline{Mit Vortrag abgleichen}
 \todoline{Inhalte aus dem Anhang in die Arbeit ziehen, insbesondere für silicon/silica}
 \todoline{Kein Umbruch zwischen Bezeichnungen und inline-Formeln}
 \todoline{Kein Umbruch in Formel-SI-Kombinationen}
 \todoline{Kein Seitenumbruch zwischen Erklärungen und Formeln}
+\todoline{Das wird Arbeit: Alle Referenzen durchgehen und vergleiche, ob ich sie im richtigen Kontext eingebunden habe!}
+\todoline{Wirkt alles immer noch so zusammen gestückelt?}
