--- a/md.tex
+++ b/md.tex
@@ -1,7 +1,7 @@
 \section{Molekulardynamik}
 \label{md}
 
-Ursprünglich mit dem Ziel der klassischen Simulation von Gasen und anderen Fluiden entwickelt, wurde die Molekulardynamik seither um die Fähigkeit zur Simulation von Festkörpern, organischen Molekülen und Reaktionen erweitert.
+Ursprünglich mit dem Ziel der klassischen Simulation von Gasen und anderen Fluiden entwickelt, wurde die Molekulardynamik\cite{hoover_molecular_1986} seither um die Fähigkeit zur Simulation von Festkörpern, organischen Molekülen und Reaktionen erweitert.
 Dadurch findet sie Anwendung in Simulationen von Materialien und chemischen Stoffen bei beliebigen Temperaturen und Drücken, um deren Verhalten vorhersagen und auf reale Prozesse zurückführen zu können.
 
 Nachfolgend möchte ich einen kurzen Überblick über die Formulierung molekulardynamischer Methoden geben (Abschnitt~\ref{mdformulation}) und im Anschluss auf die Unterschiede und Möglichkeiten der Kraftfelder eingehen (Abschnitt~\ref{mdforcefields}).
@@ -65,7 +65,7 @@ Dabei werden Fluktuationen in der Systemtemperatur unterdrückt und somit die Er
 %% Zwar hat diese Vorgehensweise den Vorteil, mit einer geringen Anzahl an äußeren Einflüssen die Temperatur konstant zu halten, jedoch eignet es sich nur für die Betrachtung zeitgemittelter Größen, da lokale Energieeinträge in das System die Trajektorien einzelner Teilchen stören können.
 %% In Zusammenhang mit der Untersuchung dynamischer Eigenschaften ist dieses Thermostat daher nicht zu empfehlen und sollte nur bei ausreichend großen Systemen Anwendung finden.
 
-Die beste Alternative für kleine Systeme ist das \textbf{Nosé-Hoover-Thermostat}\cite{nose_unified_1984}\cite{hoover_canonical_1985}, das dem System einen zusätzlichen Freiheitsgrad $s$ hinzufügt, über den die Temperatur des Systems beeinflusst werden kann.
+Die beste Alternative für kleine Systeme ist das \textbf{Nosé-Hoover-Thermostat}\cite{nose_unified_1984,hoover_canonical_1985}, das dem System einen zusätzlichen Freiheitsgrad $s$ hinzufügt, über den die Temperatur des Systems beeinflusst werden kann.
 Durch die Bewahrung der Eigenschaften des kanonischen Ensembles hat sich das Nosé-Hoover-Thermostat als Standard-Thermostat in der Molekulardynamik durchgesetzt.
 Der Einfluss auf die Teilchenenergien äußert sich in der Einführung einer zusätzlichen Reibungskraft entlang des Impulses jedes Teilchens:
 
