--- a/present.tex
+++ b/present.tex
@@ -55,7 +55,7 @@ Damit ist nicht ersichtlich, ob sich diese Methode auch für komplizierte dreidi
 \textsc{Wolf et al.}\cite{wolf_investigation_2002,wolf_simulation_2010} haben am Zentrum für Mikrotechnologien in Chemnitz in den vergangenen Jahren mit der KMC-Transportsoftware Kalypso\cite{karolewski_kalypso:_2005} die physikalische Gasphasenabscheidung auf der Reaktor-Skala simuliert, um Aussagen über das Schichtwachstum in komplizierten makroskopischen Geometrien zu gewinnen.
 Beim Auftreffen eines Atomes an der Oberfläche wird es mit einer Wahrscheinlichkeit, die von der Teilchenenergie und Auftreffwinkel abhängt, adsorbiert oder reflektiert.
 Dafür wurde eine Liste zur Interpolation von Wahrscheinlichkeiten vorbereitet, indem das Auftreffen von Atomen an verschiedenen Punkten einer Gitter-Einheitszelle per MD simuliert und anhand der Ergebnisse vieler Simulationen die Wahrscheinlichkeiten bestimmt wurden.
-Damit ist diese Methode zur Simulation von epitaktischem Wachstum gut geeignet, beschreibt aber keine rauhen Oberflächen, wie sie bei Gasphasenabscheidung häufig vorliegen\todo{Ref?}.
+Damit ist diese Methode zur Simulation von epitaktischem Wachstum glatter Schichten geeignet, beschreibt aber weder rauhe Oberflächen noch amorphe Schichten.
 Der Aufwand für die Vorausberechnung steigt für kompliziertere Oberflächen stark an und ist mit der heutigen Rechenleistung nicht realisierbar.
 
 \subsubsection{Fazit}
@@ -80,7 +80,7 @@ Kupfer-Nickel-Multilagensysteme wurden unter anderem von \textsc{Foiles et al.}\
 Der durch unterschiedliche Bindungslängen entstehende Versatz zwischen den Kupfer- und Nickel-Kristallen wurde von \textsc{Rao et al.}\cite{rao_atomistic_2000} simuliert.
 
 \subsubsection{Silizium}
-Für Silizium finden sich thermodynamische Expansions-Simulationen von \textsc{Buda et al.}\cite{buda_thermal_1990} sowie Untersuchungen von \textsc{Insepov et al.}\cite{insepov_molecular_1995} zur Auswirkung von gerichteten Cluster-Ein/-schlägen in Abhängigkeit der Einschlagsenergie.
+Für Silizium finden sich thermodynamische Expansions-Simulationen von \textsc{Buda et al.}\cite{buda_thermal_1990} sowie Untersuchungen von \textsc{Insepov et al.}\cite{insepov_molecular_1995} zur Auswirkung von gerichteten Cluster-Ein\-schlägen in Abhängigkeit der Einschlagsenergie.
 \textsc{Torre et al.}\cite{torre_study_2002} haben außerdem die Oxidierung von Silizium-Nanopartikeln mit Drei-Teilchen-Potentialen simuliert.
 %% {mehr! PVD und Oxidation / Hydroxylierung von Oberflächen} - Gibt's nicht
 
