--- a/summary.tex
+++ b/summary.tex
@@ -62,11 +62,11 @@ Die anschließende Einbindung von Parsivald in das ACCELERATE-Projekt führt zu 
 Seine Off-Lattice-Datenstrukturen können hingegen anderer Software wie Zacros\cite{stamatakis_zacros_2014} zur effizienten Beschreibung amorpher Strukturen verhelfen.
 
 %% Weitere Optimierungen und Prozesse
-Wie in der Arbeit demonstriert wurde, lässt sich Parsivald bereits jetzt zur effizienten Simulation von physikalischen Gasphasenabscheidungen nutzen, wobei die Simulation der PVD auf polykristallinen und amorphen Substraten ebenso denkbar ist wie die Simulation der Abscheidung gemischter Materialien.
-So lassen sich beispielsweise Legierungen und verschiedene Multilagen-Systeme in Simulationen physikalischer Gasphasenabscheidungen untersuchen.
+Wie in der Arbeit demonstriert wurde, lässt sich Parsivald bereits jetzt zur effizienten Simulation von physikalischen Gasphasenabscheidungen nutzen, wobei die Simulation der PVD auf polykristallinen und amorphen Substraten bessere Vergleichbarkeit mit Experimenten ermöglicht\cite{adamov_electrical_1974}.
+Es lassen sich auch gemischte Systeme wie beispielsweise Legierungen und verschiedene Multilagen-Systeme in Simulationen physikalischer Gasphasenabscheidungen untersuchen.
 
 Die reaktive Simulation von chemischen Gasphasenabscheidungen ist mit dem Parsivald-Modell theoretisch möglich, konnte aber noch nicht demonstriert werden, weshalb die Untersuchung passender ReaxFF-Parametersätze notwendig ist.
-Damit wäre auch die Simulation von mehrstufigen Abscheidungen, wie sie etwa für Interconnect-Systeme in der Mikroelektronik genutzt werden\todo{Ref?}, denkbar, bei denen viele verschiedene Materialien auf struktureller Ebene per MD beschrieben werden müssten.
+Damit wäre auch die Simulation von mehrstufigen Abscheidungen, wie sie etwa in der Mikroelektronik genutzt werden\cite{grannemann_thin_1993}, denkbar, bei denen viele verschiedene Materialien auf atomarer Ebene per MD beschrieben werden müssten.
 
 Unter Nutzung verschiedener Schichtarten ist auch die Simulation des anfänglichen Schichtwachstums auf verschiedenartigen Substraten möglich.
 Zwar wurde mit Kupfer-Nickel-Multi\-lagen-PVD bereits eine solche Untersuchung durchgeführt, doch zeigen diese Materialien gute Hafteigenschaften.
