--- a/bibliography.tex
+++ b/bibliography.tex
@@ -4,6 +4,7 @@
 \bibliographystyle{bibstyles/bibelor} % Original von Fabian Teichert
 %\usepackage{url}
 
+\newcommand{\bstmaxid}{150}
 \newcommand{\bstaddress}{}
 \newcommand{\bstauthor}{\scshape}
 \newcommand{\bstdoi}{}
@@ -26,9 +27,12 @@
 \newcommand{\bblpage}{S.}
 \newcommand{\bblpages}{S.}
 \ifdraft{
-  \newcommand{\bstwarn}{\color{red}}
+  \newcommand{\bstwarn}[1]{\color{red} #1}
 }{
-  \newcommand{\bstwarn}{\ignore}
+  \newcommand{\bstwarn}[1]{\ignore{#1}}
 }
 
 \bibliography{literature} %standard
+
+\todoline{dois und links überarbeiten, Patentnummern eintragen, Kramer: Beide Vornamen, Buda: doi!, biehl: ISBN/doi, dwivedi\_2010: doi/isbn, dwivedi\_2009-2: doi nicht verlinkt, gosalvez: doi!, lorenz: link, ylammi: doi nicht verlinkt, ritala: ISBN!, suntola patent: Patentnummer!, Voter: Adresse, seyama: doi nicht verlinkt, higashiwaki: doi nicht verlinkt}
+\todoline{doi-links fehlen -> url fehlt, ISBNs: gleiche Formatierung}
