--- a/goldpvd.tex
+++ b/goldpvd.tex
@@ -96,10 +96,10 @@ Die Simulationen zeigen epitaktisches Wachstum von Gold-Schichten (Abbildungen~\
 Experimentelle Werte zur Rauheit von epitaktisch abgeschiedenen Gold-Filmen wurden nicht gefunden werden, doch liegen die simulierten Werte unterhalb der Rauheit von \SIrange{11}{18}{\nano\meter} für polykristalline Schichten, die per PVD auf Glas-Substraten abgeschieden wurden\cite{svorcik_annealing_2011}.
 Diese sind allerdings durch die Bildung von Goldpartikel dominiert, wohingegen die simulierten Atome bereits auf perfekten monokristallinen Strukturen auftreffen.
 Da Gold auch auf anderen Kristallstrukturen und ungeordneten Substraten eine Affinität zu kristallinem Wachstum zeigt\cite{gottsche_uber_1956,everitt_evolution_2000}, wirken die Ergebnisse der Parsivald-Simulation plausibel.
-Eine Untersuchung amorpher und polykristalliner Substrate wäre hier interessant, übersteigt jedoch den Rahmen der Arbeit.
+Eine Untersuchung amorpher und polykristalliner Substrate wäre für bessere Vergleichbarkeit mit Experimenten\cite{adamov_electrical_1974} interessant, übersteigt jedoch den Rahmen der Arbeit.
 Poren und Hohlräume wurden bei Untersuchungen per Alpha-Form (Abschnitt~\ref{mdmethods-surface}) nicht gefunden, sodass die Gold-Atome in einem perfekten fcc-Gitter arrangiert sind.
 
-Ergänzend wurde zur Prüfung der Robustheit des Parsivald-Prozesses nanostrukturierte Substrate in Form von \SI{1}{\nano\meter} breiten Lamellen und Säulen vorbereitet, auf welchen sich nach kurzer Simulationszeit glatte Schichten gebildet haben, die keine Unterschiede zu den Schichten auf dem glatten Subtrat zeigen.
+Ergänzend wurde zur Prüfung der Robustheit des Parsivald-Prozesses nanostrukturierte Substrate in Form von \SI{1}{\nano\meter} breiten Lamellen und Säulen vorbereitet, auf welchen sich nach kurzer Simulationszeit glatte Schichten gebildet haben, die keine Unterschiede zu den Schichten auf dem glatten Substrat zeigen.
 
 \begin{figure}[thp]
   \captionsetup[subfigure]{singlelinecheck=false}
@@ -234,13 +234,6 @@ In der Auswertung macht sich der Abschluss durch einen rapiden Abfall der Rauhei
   \label{fig:goldpockets}
 \end{figure}
 
-\subsection{Fazit}
-
-Mit Parsivald lässt sich Gold-PVD auf glatten und leicht strukturierten Substraten ohne weitere Probleme simulieren, wobei sich durch epitaktisches Wachstum perfekte kristalline Schichten auf glatten Substraten bilden.
-Strukturierte Substrate sorgen in Parsivald-Simulationen hingegen für die Bildung von Nanoporen und Hohlräumen, die durch die aktuelle Implementierung des Parsivald-Modelles verursacht sind.
-Eine mögliche Lösung wäre die implizite Betrachtung der Oberfläche mit Delaunay-Triangulationen, wie sie bereits für die Bestimmung der Alpha-Formen genutzt werden.
-Damit würden auch schiefe Auftreffwinkel ermöglicht, wie sie bei PVD-Prozessen auftreten\todo{Referenz auf ein Paper, das schiefe Auftreffwinkel für PVD untersucht}, sowie eine bessere Betrachtung von CVD-Prozessen, die dafür bekannt sind, auch auf strukturierten Oberflächen konforme Schichten abzuscheiden\todo{Referenz auf Handbook, oder auf ein anderes Paper?}.
-
 \subsection{Skalierbarkeit mit der Simulationsgröße}
 \label{goldscalability}
 
@@ -292,7 +285,7 @@ Ein Vergleich der Laufzeiten mit Werten für $T_p$ aus Gleichung~\ref{eq:runtime
 Aufgrund des Wachstums von Schichten unterschiedlicher Dicke bei verschiedenen Workerdichten ist ein direkter Vergleich nicht aussagekräftig, doch bestätigt die Übereinstimmung mit den analytischen Werten die gute Skalierbarkeit von Parsivald mit der Substratbreite.
 
 Zuletzt zeigt die Auswertung der vom Hostprozess verbrauchten Ressourcen einen Speicherverbrauch von $\text{RAM} = \SI{253}{\mebi\byte} + \SI{94}{\byte} \cdot N_\text{Atome}$, womit auch große Simulationen mit \num{1.9e9} Atomen mit nur \SI{186}{\gibi\byte} Arbeitsspeicher durchgeführt werden können (Abbildung~\ref{fig:goldscala-memory}).
-Somit stellt der verfügbare Arbeitsspeicher aktuell nur ein untergeordnetes Kriterium dar, jedoch spiegelt sich diese Größe auch in den atomistischen Dateien wider, die von Parsivald erzeugt werden, und somit nicht mehr effizient ausgewertet werden können, weshalb eine Auswertung zur Ausführungszeit notwendig wäre.
+Somit stellt der verfügbare Arbeitsspeicher aktuell nur ein untergeordnetes Kriterium dar, jedoch spiegelt sich diese Größe auch in den atomistischen Dateien wider, die von Parsivald erzeugt werden, und somit nicht mehr effizient ausgewertet werden können, weshalb eine Auswertung während der Ausführung unter Nutzung der effizienten Datenstrukturen notwendig wäre.
 
 Somit bestätigen sich einige Vorhersagen aus Abschnitt~\ref{runtime}, jedoch sind weitere Untersuchungen, etwa hinsichtlich der Ereignis-Laufzeit $T_\text{E}$, für einen umfassenden Vergleich notwendig.
 
@@ -330,3 +323,10 @@ Somit bestätigen sich einige Vorhersagen aus Abschnitt~\ref{runtime}, jedoch si
   \caption{Parallelisierungseigenschaften von Parsivald}
   \label{fig:goldscala}
 \end{figure}
+
+\subsection{Fazit}
+
+Mit Parsivald lässt sich Gold-PVD auf glatten und leicht strukturierten Substraten ohne weitere Probleme effizient simulieren, wobei sich durch epitaktisches Wachstum defektfreie kristalline Schichten auf glatten Substraten bilden.
+Strukturierte Substrate sorgen in Parsivald-Simulationen hingegen für die Bildung von Nanoporen und Hohlräumen, die durch die aktuelle Implementierung des Parsivald-Modelles verursacht sind.
+Eine mögliche Lösung wäre die implizite Betrachtung der Oberfläche mit Delaunay-Triangulationen, wie sie bereits für die Bestimmung der Alpha-Formen genutzt werden.
+Damit würden auch schiefe Auftreffwinkel ermöglicht, wie sie bei PVD-Prozessen auftreten\todo{Referenz auf ein Paper, das schiefe Auftreffwinkel für PVD untersucht}, sowie eine bessere Betrachtung von CVD-Prozessen, die dafür bekannt sind, auch auf strukturierten Oberflächen konforme Schichten abzuscheiden\cite{grannemann_thin_1993}.
