--- a/packages.tex
+++ b/packages.tex
@@ -35,12 +35,12 @@
 
 %% \usepackage[plainpages=false,pdfpagelabels]{hyperref}
 \ifpaperonly
-  \usepackage[plainpages=false, pdfpagelabels, hidelinks=true, colorlinks=false, pdfpagelayout=TwoPageRight]{hyperref}
+  \usepackage[plainpages=false, pdfpagelabels, hidelinks, colorlinks=false, pdfpagelayout=TwoPageRight]{hyperref}
 \else
   \definecolor{url}{rgb}{0.7 0 0.2}
   \definecolor{link}{rgb}{0.0 0.0 0.8}
   \definecolor{cite}{rgb}{0.0 0.5 0}
-  \usepackage[plainpages=false, pdfpagelabels, hidelinks=true, colorlinks=true, linkcolor=link, citecolor=cite, urlcolor=url, pdfpagelayout=TwoPageRight]{hyperref}
+  \usepackage[plainpages=false, pdfpagelabels, hidelinks, colorlinks=true, linkcolor=link, citecolor=cite, urlcolor=url, pdfpagelayout=TwoPageRight]{hyperref}
 \fi
 
 \usepackage{amssymb}
