--- a/results.tex
+++ b/results.tex
@@ -1,4 +1,4 @@
-\chapter{Ergebnisse}
+\chapter{Simulationen von Gasphasenabscheidungen}
 \label{results}
 
 Unter Nutzung der in Kapitel~\ref{theory} und Kapitel~\ref{models} vorgestellten Methoden werden im folgenden Kapitel Abscheidungen mit dem Ziel simuliert, die Präparation und Durchführung von unterschiedlichen Abscheidungsprozessen mit Parsivald zu untersuchen und Einschränkungen des Parsivald-Modelles für PVD und CVD zu prüfen.
